# mwgg-gui

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
mwgg_gui/: __init__.py  app.py  constants.py  loadanimlayout.py
mwgg_gui/components/: __init__.py  avatar_safety.py  bottomappbar.py  dialog.py  guidataclasses.py  mw_theme.py  profile.py  progress_overlay.py  titlebar.py  topappbar.py
mwgg_gui/console/: __init__.py  console.py  textconsole.py
mwgg_gui/hint/: __init__.py  hintscreen.py
mwgg_gui/launcher/: __init__.py  launcher.kv  launcher.py  launcher_favorite_bar.py  launcher_sliver_appbar.py  launcher_yaml.kv  launcher_yaml.py
mwgg_gui/overrides/: __init__.py  colorpicker.py  expansionlist.kv  expansionlist.py  fa_icons.py  markuptextfield.kv  markuptextfield.py  screen.py
mwgg_gui/settings/: __init__.py  settings_components.py  settings_screen.py
