[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "mwgg_gui"
version = "0.3.2"
description = "GUI package for MultiWorldGG"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [ "Private :: Do Not Upload",]
dependencies = [ "kivy>=2.3.1", "kivymd @ git+https://github.com/kivymd/KivyMD@d2f7740", "kivymd>=2.0.1.dev0", "pillow>=11.3.0", "asynckivy>=0.6.4", "numpy>=2.3.2",]
[[project.authors]]
name = "DelilahIsDidi"

[tool.setuptools.package-data]
mwgg_gui = [ "**/*.kv",]

[tool.setuptools.packages.find]
where = [ ".",]
include = [ "mwgg_gui*",]
